--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html>
 
 <head>
-<title>My Portfolio</title>
-<link rel="stylesheet" type="text/css" href="css/style.css" />
+<title>My Porfolio</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
 
-<div class="header-div container">
+<div class="header-div container-fluid">
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
@@ -42,18 +41,20 @@
 </nav>
 
 <div class="conatiner-padding" >
-<div class="container">
+<div class="container" style=" background-color:black;">
 <div class="row" id="Introduction">
-<div class="col-md-6 col-sm-12">
-<div class="col-padding-1">
-<h3><img src="https://img.icons8.com/emoji/32/000000/waving-hand-emoji.png"/>Hello I'm</h3>
-<h1>Sami Ullah Saleem</h1>
-<h4>Ethical Hacker and Web Designer </h4>
-<p>I am a student of IT in Punjab University College Of Informatioin and Technology. I have done a lot of courses online. I love to program things.</p>
+<div class="col-sm-12 col-md-12 col-lg-6">
+<div style="display: block;margin-left: auto;margin-right: auto; color:white; padding-top:80px;"  >
+<h3 style="text-align:center;"><img src="https://img.icons8.com/emoji/32/000000/waving-hand-emoji.png"/>Hello I'm</h3>
+<h1 style="text-align:center;">Sami Ullah Saleem</h1>
+<h4 style="text-align:center;">Ethical Hacker and Web Designer </h4>
+<h4 style="text-align:center;display:block;">I am a student of IT in Punjab University College Of Informatioin and Technology. I love to learn programming.</h4>
+
 </div>
+
 </div>
-<div class="col-md-5 col-sm-12">
-<img class="img-2 align-right" src="img/Profile_img_4.png">
+<div class="col-sm-12 col-md-12 col-lg-6">
+<img style="width: 60%;height: 100%;display: block;margin-left: auto;margin-right: auto;" src="img/Profile_img_4.png">
 </div>
 </div>
 </div>
@@ -61,22 +62,21 @@
 </div>
 
 
-<h1 class="skills-h1">Skills</h1>
+<h1 class="skills-h1 white-text">Skills</h1>
 <section id="Skills">
-<div>
-<div class="container container-2">
-<div class="row">
-<div class="col-md-6 col-sm-12">
+<div class="container">
+<div class="row ">
+<div class="col-sm-12 col-md-12 col-lg-6 ">
 
-<span><h6><img src="https://img.icons8.com/color/32/000000/html-5.png"/>HTML5</h6</span>
+<span><h6 class="white-text"><img src="https://img.icons8.com/color/32/000000/html-5.png"/>HTML5</h6</span>
 
 <div class="progress">
 <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%">90%</div>
 </div>
 
 </div>
-<div class="col-md-6 col-sm-12">
-<span><h6><img src="https://img.icons8.com/color/32/000000/css3.png"/>CSS3</h6</span>
+<div class="col-sm-12 col-md-12 col-lg-6">
+<span><h6 class="white-text"><img src="https://img.icons8.com/color/32/000000/css3.png"/>CSS3</h6</span>
 
 <div class="progress">
 <div class="progress-bar progress-bar-striped progress-bar-animated " role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 70%">70%</div>
@@ -84,15 +84,15 @@
 </div>
 </div>
 <div class="row">
-<div class="col-md-6 col-sm-12">
-<span><h6><img src="https://img.icons8.com/color/32/000000/javascript-logo-1.png"/>Javascript</h6</span>
+<div class="col-sm-12 col-md-12 col-lg-6">
+<span><h6 class="white-text"><img src="https://img.icons8.com/color/32/000000/javascript-logo-1.png"/>Javascript</h6</span>
 
 <div class="progress">
 <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 55%">55%</div>
 </div>
 </div>
-<div class="col-md-6 col-sm-12">
-<span><h6><img src="https://img.icons8.com/color/32/000000/python.png"/>Python</h6</span>
+<div class="col-sm-12 col-md-12 col-lg-6">
+<span><h6 class="white-text"><img src="https://img.icons8.com/color/32/000000/python.png"/>Python</h6</span>
 
 <div class="progress">
 <div class="progress-bar progress-bar-striped progress-bar-animated " role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%">90%</div>
@@ -100,15 +100,15 @@
 </div>
 </div>
 <div class="row">
-<div class="col-md-6 col-sm-12">
-<span><h6><img src="https://img.icons8.com/color/32/000000/bootstrap.png"/>Bootstrap</h6</span>
+<div class="col-sm-12 col-md-12 col-lg-6">
+<span><h6 class="white-text"><img src="https://img.icons8.com/color/32/000000/bootstrap.png"/>Bootstrap</h6</span>
 
 <div class="progress">
 <div class="progress-bar progress-bar-striped progress-bar-animated " role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">90%</div>
 </div>
 </div>
-<div class="col-md-6 col-sm-12">
-<span><h6><img src="https://img.icons8.com/color/32/000000/linux.png"/>Linux</h6</span>
+<div class="col-sm-12 col-md-12 col-lg-6">
+<span><h6 class="white-text"><img src="https://img.icons8.com/color/32/000000/linux.png"/>Linux</h6</span>
 
 <div class="progress">
 <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%">90%</div>
@@ -116,15 +116,15 @@
 </div>
 </div>
 <div class="row">
-<div class="col-md-6 col-sm-12">
-<span><h6><img src="https://img.icons8.com/color/32/000000/c-plus-plus-logo.png"/>C++</h6</span>
+<div class="col-sm-12 col-md-12 col-lg-6">
+<span><h6 class="white-text"><img src="https://img.icons8.com/color/32/000000/c-plus-plus-logo.png"/>C++</h6</span>
 
 <div class="progress">
-<div class="progress-bar progress-bar-striped progress-bar-animated " role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 50%">50%</div>
+<div class="progress-bar progress-bar-striped progress-bar-animated " role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%">90%</div>
 </div>
 </div>
-<div class="col-md-6 col-sm-12">
-<span><h6><img src="https://img.icons8.com/color/32/000000/azure-1.png"/>Microsoft Azure</h6</span>
+<div class="col-sm-12 col-md-12 col-lg-6">
+<span><h6 class="white-text"><img src="https://img.icons8.com/color/32/000000/azure-1.png"/>Microsoft Azure</h6</span>
 
 <div class="progress">
 <div class="progress-bar progress-bar-striped progress-bar-animated " role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 60%">60%</div>
@@ -136,10 +136,10 @@
 </section>
 
 <section id="Education">
-<h1 class="education-h1">Education</h1>
-<div class="container">
-<div class="row">
-<div class="col-lg-4 col-md-12 col-sm-12 text-center">
+<h1 class="education-h1 white-text">Education</h1>
+<div class="container-fluid">
+<div class="row align-items-center">
+<div class="col-sm-12 col-md-12 col-lg-4 text-center">
 <div class="card card-1 text-white bg-primary mb-3" style="width: 20rem;">
   <img src="img/pucit_old_campus.jpg" class="card-img-top" alt="...">
   <div class="card-body">
@@ -156,7 +156,7 @@
   </div>
 </div>
 </div>
-<div class="col-lg-4 col-md-12 col-sm-12 text-center">
+<div class="col-md-12 col-sm-12 col-lg-4 text-center">
 <div class="card text-white bg-primary mb-3" style="width: 20rem;">
   <img src="img/Punjab_College_Campus_8_Lahore.jpg" width="100%" " class="card-img-top" alt="...">
   <div class="card-body">
@@ -175,7 +175,7 @@
   </div>
 </div>
 </div>
-<div class="col-lg-4 col-md-12 col-sm-12 text-center">
+<div class="col-sm-12 col-md-12 col-lg-4 text-center">
 <div class="card text-white bg-primary mb-3" style="width: 20rem;">
   <img src="img/Qazi.jpg" width="100%" class="card-img-top" alt="...">
   <div class="card-body">
@@ -199,7 +199,7 @@
 
 </section>
 <section class="Accomplishment">
-<h1 class="accomplish-1" id="Accomplishment">Accomplishment</h1>
+<h1 class="accomplish-1 white-text" id="Accomplishment">Accomplishment</h1>
 <div class="container">
 
 
@@ -242,7 +242,7 @@
 </section>
 </div>
 <section id="social-network">
-<h1 class="social-media-h1">Social Media Networks</h1>
+<h1 class="social-media-h1 white-text">Social Media Networks</h1>
 
 <div class="social-media-h1">
 <a href="https://www.facebook.com/samiullah.saleem.5036" target="_blank"> <img src="https://img.icons8.com/fluent/32/000000/facebook-new.png"/>   </a><span><a href="https://www.linkedin.com/in/samiullahsaleem/" target="_blank"><img src="https://img.icons8.com/fluent/32/000000/linkedin.png"/></a>
@@ -256,8 +256,9 @@
 
 </footer>
 
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
+<link rel="stylesheet" type="text/css" href="css/style.css" /><script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 </body>
 
