--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html>
 
 <head>
+	
 <title>My Portfolio</title>
+  <meta charset="utf-8">
+  <meta name="description" content="My Resume">
+  <meta name="keywords" content="HTML, CSS, JavaScript">
+  <meta name="author" content="Sami Ullah Saleem">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
