--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <div class="header-div container-fluid">
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="margin-left:0px; margin-right:0px;">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Web<span class="em-text"> Designer</span></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="true" aria-label="Toggle navigation">
@@ -167,7 +167,7 @@
   <img src="img/Punjab_College_Campus_8_Lahore.jpg" width="100%" " class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Punjab College Of Science</h5>
-    <p class="card-text">I completed my Intermediate Education from here.</p>
+    <p class="card-text">I have completed my Intermediate Education from here.</p>
   </div>
   <ul class="list-group list-group-flush">
     <li class="list-group-item" style="color:black !important;"><b>Marks: 1022/1100</b></li>
@@ -186,7 +186,7 @@
   <img src="img/Qazi.jpg" width="100%" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Qazi Group of School</h5>
-    <p class="card-text">I completed my Matriculation Education from here.</p>
+    <p class="card-text">I have completed my Matriculation Education from here.</p>
   </div>
   <ul class="list-group list-group-flush">
     <li class="list-group-item" style="color:black !important;"><b>Marks: 1038/1100</b></li>
