--- a/contact.html
+++ b/contact.html
@@ -1,19 +1,26 @@
 <!Doctype html>
 <html>
-
 <head>
 <title>My Portfolio</title>
-<link rel="stylesheet" type="text/css" href="css/style.css" />
+  <meta charset="utf-8">
+  <meta name="description" content="My Resume">
+  <meta name="keywords" content="HTML, CSS, JavaScript">
+  <meta name="author" content="Sami Ullah Saleem">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet"  href= "https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" /> 
+<link rel="stylesheet" type="text/css" href="css/style.css" />
+
 </head>
 
 <body>
 
-<div class="header-div container">
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="margin-left:0px; margin-right:0px;">
   <div class="container-fluid">
-    <a class="navbar-brand" href="index.html">Web<span class="em-text"> Designer</span></a>
+    <a class="navbar-brand" href="#">Web<span class="em-text"> Designer</span></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="true" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -33,24 +40,25 @@
           <a class="nav-link active" aria-current="page" href="#Accomplishment">Accomplishment</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Contact</a>
+          <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
         </li>
       </ul>
 	  </div>
     </div>
   </div>
 </nav>
+
 <div class="container">
   <form action="contact.php" method="post">
 
-    <label for="fname">First Name</label>
+    <label for="fname" class="white-text">First Name</label>
     <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
-    <label for="lname">Last Name</label>
+    <label for="lname" class="white-text">Last Name</label>
     <input type="text" id="lname" name="lastname" placeholder="Your last name..">
 
 
-    <label for="subject">Subject</label>
+    <label for="subject" class="white-text">Subject</label>
     <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
 
     <input type="submit" value="Submit">
@@ -68,7 +76,7 @@
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
-</body>
+<link rel="stylesheet" type="text/css" href="css/style.css" /><script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script></body>
 
 </html>
