--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
   <img src="img/Punjab_College_Campus_8_Lahore.jpg" width="100%" " class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Punjab College Of Science</h5>
-    <p class="card-text">I completed my Intermediate Education from here.</p>
+    <p class="card-text">I have completed my Intermediate Education from here.</p>
   </div>
   <ul class="list-group list-group-flush">
     <li class="list-group-item" style="color:black !important;"><b>Marks: 1022/1100</b></li>
@@ -191,7 +191,7 @@
   <img src="img/Qazi.jpg" width="100%" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Qazi Group of School</h5>
-    <p class="card-text">I completed my Matriculation Education from here.</p>
+    <p class="card-text">I have completed my Matriculation Education from here.</p>
   </div>
   <ul class="list-group list-group-flush">
     <li class="list-group-item" style="color:black !important;"><b>Marks: 1038/1100</b></li>
@@ -274,3 +274,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 </body>
 
+</html>
