--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="margin-left:0px; margin-right:0px;">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Web<span class="em-text"> Designer</span></a>
+    <a class="navbar-brand" href="index.html">Web<span class="em-text"> Designer</span></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="true" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
