--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="margin-left:0px; margin-right:0px;">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Web<span class="em-text"> Designer</span></a>
+    <a class="navbar-brand" href="index.html">Web<span class="em-text"> Designer</span></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="true" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -49,6 +49,7 @@
 </nav>
 
 <div class="container">
+  <h1 class="white-text">Contact Me</h1>
   <form action="contact.php" method="post">
 
     <label for="fname" class="white-text">First Name</label>
