--- a/contact.html
+++ b/contact.html
@@ -28,19 +28,19 @@
 	<div class="navbar-div">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#Introduction">Introduction</a>
+          <a class="nav-link active" aria-current="page" href="https://www.samiullahsaleem.technology/#Introduction">Introduction</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#Skills">Skills</a>
+          <a class="nav-link active" aria-current="page" href="https://www.samiullahsaleem.technology/#Skills">Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#Education">Education</a>
+          <a class="nav-link active" aria-current="page" href="https://www.samiullahsaleem.technology/#Education">Education</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#Accomplishment">Accomplishment</a>
+          <a class="nav-link active" aria-current="page" href="https://www.samiullahsaleem.technology/#Accomplishment">Accomplishment</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
+          <a class="nav-link active" aria-current="page" href="https://www.samiullahsaleem.technology/contact.html">Contact</a>
         </li>
       </ul>
 	  </div>
