--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
 </div>
 <div class="row">
 <div class="col-sm-12 col-md-12 col-lg-6">
-<span><h6 class="bg-warning white-text"><img src="https://img.icons8.com/color/32/000000/bootstrap.png"/>Bootstrap</h6</span>
+<span><h6 class=" white-text"><img src="https://img.icons8.com/color/32/000000/bootstrap.png"/>Bootstrap</h6</span>
 
 <div class="progress">
-<div class="progress-bar progress-bar-striped progress-bar-animated " role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 60%">60%</div>
+<div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 60%">60%</div>
 </div>
 </div>
 <div class="col-sm-12 col-md-12 col-lg-6">
