--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#Accomplishment">Accomplishment</a>
         </li>
+	<li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="https://samiullahsaleem.medium.com">Blogs</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
         </li>
