--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
           <a class="nav-link active" aria-current="page" href="#Accomplishment">Accomplishment</a>
         </li>
 	<li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="https://samiullahsaleem.medium.com">Blogs</a>
+          <a class="nav-link active" aria-current="page" href="https://samiullahsaleem.medium.com">Blog</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
+          <a class="nav-link active" aria-current="page" href="emailto:samiullah.saleem@studentambassadors.com">Contact</a>
         </li>
       </ul>
 	  </div>
