added contact.html page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <a class="nav-link active" aria-current="page" href="https://samiullahsaleem.medium.com">Blog</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="emailto:samiullah.saleem@studentambassadors.com">Contact</a>
+          <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
         </li>
       </ul>
 	  </div>
