--- a/contact.html
+++ b/contact.html
@@ -50,21 +50,20 @@
 
 <div class="container">
   <h1 class="white-text">Contact Me</h1>
-  <form action="contact.php" method="post">
+ 
 
     <label for="fname" class="white-text">First Name</label>
     <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
     <label for="lname" class="white-text">Last Name</label>
     <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-
-
     <label for="subject" class="white-text">Subject</label>
     <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+    <br>
+    <br>
+    <h2 id="message" style="color: white;"></h2>
+    <input type="submit" onclick="sent()">
 
-    <input type="submit" value="Submit">
-
-  </form>
 </div>
 <br>
 <br>
@@ -74,7 +73,51 @@
 <p>Made by Sami Ullah Saleem</p>
 
 </footer>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
 
+	
+<script id="mainScript">
+  // Your web app's Firebase configuration
+var firebaseConfig = {
+    apiKey: "AIzaSyDwbDts8oX9ba55t75f6-zt-YlfeRqDm2c",
+    authDomain: "portfolio-contact-page-4d740.firebaseapp.com",
+    projectId: "portfolio-contact-page-4d740",
+    storageBucket: "portfolio-contact-page-4d740.appspot.com",
+    messagingSenderId: "334366523355",
+    appId: "1:334366523355:web:f69fe1b18b39fb8309f1fe"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
+
+	<script>
+		function ready()
+		{
+		firstName = document.getElementById('fname').value;
+		lastName = document.getElementById('lname').value;
+		Message = document.getElementById('subject').value;				
+		}
+		
+		function sent()
+		{
+			ready();
+			firebase.database().ref('clients/'+ firstName).set({
+			FirstName: firstName,
+			LastName: lastName,
+			Message: subject
+			});
+			header = document.getElementById('message'); 
+			header.innerText = "Your form has been submitted. We will contact you shortly";	
+		}
+		
+	</script>
+	
+	
+	
+	
+	
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
 <link rel="stylesheet" type="text/css" href="css/style.css" /><script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
