--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@ var firebaseConfig = {
 			firebase.database().ref('clients/'+ firstName).set({
 			FirstName: firstName,
 			LastName: lastName,
-			Message: subject
+			Message: Message
 			});
 			header = document.getElementById('message'); 
 			header.innerText = "Your form has been submitted. We will contact you shortly";	
