--- a/contact.html
+++ b/contact.html
@@ -80,13 +80,13 @@
 	
 <script id="mainScript">
   // Your web app's Firebase configuration
-var firebaseConfig = {
-    apiKey: "AIzaSyDwbDts8oX9ba55t75f6-zt-YlfeRqDm2c",
-    authDomain: "portfolio-contact-page-4d740.firebaseapp.com",
-    projectId: "portfolio-contact-page-4d740",
-    storageBucket: "portfolio-contact-page-4d740.appspot.com",
-    messagingSenderId: "334366523355",
-    appId: "1:334366523355:web:f69fe1b18b39fb8309f1fe"
+  var firebaseConfig = {
+    apiKey: "AIzaSyAn-mC6gDnSiYpAdcanXeR6rIX8DuT9LEw",
+    authDomain: "portfolio-form-7087c.firebaseapp.com",
+    projectId: "portfolio-form-7087c",
+    storageBucket: "portfolio-form-7087c.appspot.com",
+    messagingSenderId: "76448027380",
+    appId: "1:76448027380:web:de03a312ee82e53db144a1"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
