--- a/contact.html
+++ b/contact.html
@@ -62,9 +62,8 @@
     <br>
     <br>
     <h2 id="message" style="color: white;"></h2>
-    <input type="submit" onclick="sent()">
-
-</div>
+    <button  onclick="sent()" style="color: white; background-color: green;">submit</button>
+   </div>
 <br>
 <br>
 
