Contact form with firebase version 2.0

--- a/contact.html
+++ b/contact.html
@@ -62,8 +62,8 @@
     <br>
     <br>
     <h2 id="message" style="color: white;"></h2>
-    <button  onclick="sent()" style="color: white; background-color: green;">submit</button>
-   </div>
+    <input type="submit" onclick="sent()">
+	</div>
 <br>
 <br>
 
